feat: console name & scale system

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -72,6 +72,45 @@ html {scrollbar-width: none;} */
     text-shadow: none;
 }
 
+
+/* ------------------------- Scaling System by Osmo [https://osmo.supply/] -------------------------  */
+/* Desktop */
+:root {
+    --size-unit: 16; /* body font-size in design - no px */
+    --size-container-ideal: 1440; /* screen-size in design - no px */
+    --size-container-min: 992px;
+    --size-container-max: 1920px;
+    --size-container: clamp(var(--size-container-min), 100vw, var(--size-container-max));
+    --size-font: calc(var(--size-container) / (var(--size-container-ideal) / var(--size-unit)));
+}
+
+/* Tablet */
+@media screen and (max-width: 991px) {
+    :root {
+      --size-container-ideal: 834; /* screen-size in design - no px */
+      --size-container-min: 768px;
+      --size-container-max: 991px;
+    }
+}
+  
+/* Mobile Landscape */
+@media screen and (max-width: 767px) {
+    :root {
+      --size-container-ideal: 550; /* screen-size in design - no px */
+      --size-container-min: 480px;
+      --size-container-max: 767px;
+    }
+}
+  
+/* Mobile Portrait */
+@media screen and (max-width: 479px) {
+    :root {
+      --size-container-ideal: 390; /* screen-size in design - no px */
+      --size-container-min: 320px;
+      --size-container-max: 479px;
+    }
+}
+
 body {
     font-family: "Satoshi", "PP Neue Montreal", Arial, Helvetica Neue, Helvetica, sans-serif;
     font-size: var(--size-font);
@@ -126,4 +165,29 @@ p {
     font-weight: 400;
     line-height: 1.4;
     font-weight: 500;
+}
+
+.container {
+    z-index: 1;
+    max-width: var(--size-container);
+    padding-left: var(--container-padding);
+    padding-right: var(--container-padding);
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
+    background-color: rebeccapurple;
+}
+  
+.container.is--full {
+    max-width: 100%;
+}
+  
+.container.is--medium {
+    max-width: calc(var(--size-container) * .85);
+    background-color: royalblue;
+}
+  
+.container.small {
+    max-width: calc(var(--size-container) * 0.7);
 }
