--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -10,7 +10,7 @@
 }
 
 html {
-    scroll-behavior: initial;
+  scroll-behavior: initial;
 }
 
 html,
@@ -20,7 +20,7 @@ body {
 
 /* link tag owns the color of it's father element */
 a {
-    color: inherit;
+  color: inherit;
 }
 
 /* ------------------------- Hide Scrollbar -------------------------------------------------- */
@@ -32,173 +32,177 @@ body::-webkit-scrollbar {display: none;}
 body {-ms-overflow-style: none;}
 html {scrollbar-width: none;} */
 
-
 /* ------------------------- colors and other stuff ---------------------------------------- */
 :root {
-    --brand_white: #FFFFFF;
-    --brand_light_gray: #D3D4D7;
-    --brand_dark_gray: #636468;
-    --brand_bg_gray: #F0F1FA;
-    --brand_black: #0F0F0F;
-    --brand_black_semi: #141517;
-    --brand_black_hover: #28292D;
-    --brand_green: #0ED285;
-  
-    --light-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-    --dark-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
-  
-    --cubic-default: cubic-bezier(0.65, 0.05, 0, 1);
-    --duration-default: 0.735s;
-    --animation-default: var(--duration-default) var(--cubic-default);
+  --brand_white: #ffffff;
+  --brand_light_gray: #d3d4d7;
+  --brand_dark_gray: #636468;
+  --brand_bg_gray: #f0f1fa;
+  --brand_black: #0f0f0f;
+  --brand_black_semi: #141517;
+  --brand_black_hover: #28292d;
+  --brand_green: #0ed285;
 
-    --gap: 2em;
-    --section-padding: calc(3.5em + (var(--gap) * 2));
-    --container-padding: 2em;
-    --header-height: calc(1.5em + (var(--gap) * 2));
-    --footer-height: calc(2.785em + (var(--gap) * 2));
+  --light-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+  --dark-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+
+  --cubic-default: cubic-bezier(0.65, 0.05, 0, 1);
+  --duration-default: 0.735s;
+  --animation-default: var(--duration-default) var(--cubic-default);
+
+  --gap: 2em;
+  --section-padding: calc(3.5em + (var(--gap) * 2));
+  --container-padding: 2em;
+  --header-height: calc(1.5em + (var(--gap) * 2));
+  --footer-height: calc(2.785em + (var(--gap) * 2));
 }
-
 
 /* ------------------------- text selection ---------------------------------------- */
 ::selection {
-    background-color: var(--brand_black_hover);
-    color: var(--brand_white);
-    text-shadow: none;
+  background-color: var(--brand_black_hover);
+  color: var(--brand_white);
+  text-shadow: none;
 }
 
 ::-moz-selection {
-    background-color: var(--brand_black_hover);
-    color: var(--brand_white);
-    text-shadow: none;
+  background-color: var(--brand_black_hover);
+  color: var(--brand_white);
+  text-shadow: none;
 }
-
 
 /* ------------------------- Scaling System by Osmo [https://osmo.supply/] -------------------------  */
 /* Desktop */
 :root {
-    --size-unit: 16; /* body font-size in design - no px */
-    --size-container-ideal: 1440; /* screen-size in design - no px */
-    --size-container-min: 992px;
-    --size-container-max: 1920px;
-    --size-container: clamp(var(--size-container-min), 100vw, var(--size-container-max));
-    --size-font: calc(var(--size-container) / (var(--size-container-ideal) / var(--size-unit)));
+  --size-unit: 16; /* body font-size in design - no px */
+  --size-container-ideal: 1440; /* screen-size in design - no px */
+  --size-container-min: 992px;
+  --size-container-max: 1920px;
+  --size-container: clamp(
+    var(--size-container-min),
+    100vw,
+    var(--size-container-max)
+  );
+  --size-font: calc(
+    var(--size-container) / (var(--size-container-ideal) / var(--size-unit))
+  );
 }
 
 /* Tablet */
 @media screen and (max-width: 991px) {
-    :root {
-      --size-container-ideal: 834; /* screen-size in design - no px */
-      --size-container-min: 768px;
-      --size-container-max: 991px;
-    }
+  :root {
+    --size-container-ideal: 834; /* screen-size in design - no px */
+    --size-container-min: 768px;
+    --size-container-max: 991px;
+  }
 }
-  
+
 /* Mobile Landscape */
 @media screen and (max-width: 767px) {
-    :root {
-      --size-container-ideal: 550; /* screen-size in design - no px */
-      --size-container-min: 480px;
-      --size-container-max: 767px;
-    }
+  :root {
+    --size-container-ideal: 550; /* screen-size in design - no px */
+    --size-container-min: 480px;
+    --size-container-max: 767px;
+  }
 }
-  
+
 /* Mobile Portrait */
 @media screen and (max-width: 479px) {
-    :root {
-      --size-container-ideal: 390; /* screen-size in design - no px */
-      --size-container-min: 320px;
-      --size-container-max: 479px;
-    }
+  :root {
+    --size-container-ideal: 390; /* screen-size in design - no px */
+    --size-container-min: 320px;
+    --size-container-max: 479px;
+  }
 }
 
 body {
-    font-family: "Satoshi", "PP Neue Montreal", Arial, Helvetica Neue, Helvetica, sans-serif;
-    font-size: var(--size-font);
-    line-height: 1;
-    font-weight: 500;
-    background-color: var(--brand_bg_gray);
+  font-family: "Satoshi", "PP Neue Montreal", Arial, Helvetica Neue, Helvetica,
+    sans-serif;
+  font-size: var(--size-font);
+  line-height: 1;
+  font-weight: 500;
+  background-color: var(--brand_bg_gray);
 }
-  
+
 h1 {
-    margin-top: 0;
-    margin-bottom: 0;
-    font-size: 7.5em;
-    font-weight: 500;
-    line-height: 1;
+  margin-top: 0;
+  margin-bottom: 0;
+  font-size: 7.5em;
+  font-weight: 500;
+  line-height: 1;
 }
-  
+
 h2 {
-    margin-top: 0;
-    margin-bottom: 0;
-    font-size: 5em;
-    font-weight: 500;
-    line-height: 1.05;
+  margin-top: 0;
+  margin-bottom: 0;
+  font-size: 5em;
+  font-weight: 500;
+  line-height: 1.05;
 }
-  
+
 h3 {
-    margin-top: 0;
-    margin-bottom: 0;
-    font-size: 2.5em;
-    font-weight: 500;
-    line-height: 1.1;
+  margin-top: 0;
+  margin-bottom: 0;
+  font-size: 2.5em;
+  font-weight: 500;
+  line-height: 1.1;
 }
-  
+
 h4 {
-    margin-top: 10px;
-    margin-bottom: 10px;
-    font-size: 1.75em;
-    font-weight: 500;
-    line-height: 1.15;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  font-size: 1.75em;
+  font-weight: 500;
+  line-height: 1.15;
 }
-  
+
 h5 {
-    margin-top: 10px;
-    margin-bottom: 10px;
-    font-size: 1.25em;
-    font-weight: 500;
-    line-height: 1.2;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  font-size: 1.25em;
+  font-weight: 500;
+  line-height: 1.2;
 }
-  
+
 p {
-    margin-bottom: 0;
-    margin-top: 0;
-    font-size: 1em;
-    font-weight: 400;
-    line-height: 1.4;
-    font-weight: 500;
+  margin-bottom: 0;
+  margin-top: 0;
+  font-size: 1em;
+  font-weight: 400;
+  line-height: 1.4;
+  font-weight: 500;
 }
 
 .container {
-    z-index: 1;
-    max-width: var(--size-container);
-    padding-left: var(--container-padding);
-    padding-right: var(--container-padding);
-    width: 100%;
-    margin-left: auto;
-    margin-right: auto;
-    position: relative;
-    /* background-color: rebeccapurple; */
+  z-index: 1;
+  max-width: var(--size-container);
+  padding-left: var(--container-padding);
+  padding-right: var(--container-padding);
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+  /* background-color: rebeccapurple; */
 }
-  
+
 .container.is--full {
-    max-width: 100%;
+  max-width: 100%;
 }
-  
+
 .container.is--medium {
-    max-width: calc(var(--size-container) * .85);
-    padding-left: 0;
-    padding-right: 0;
-    /* background-color: royalblue; */
+  max-width: calc(var(--size-container) * 0.85);
+  padding-left: 0;
+  padding-right: 0;
+  /* background-color: royalblue; */
 }
 
 @media screen and (max-width: 991px) {
-    .container.is--medium {
-        padding-left: var(--container-padding);
-        padding-right: var(--container-padding);
-        max-width: 100%;
-    }
+  .container.is--medium {
+    padding-left: var(--container-padding);
+    padding-right: var(--container-padding);
+    max-width: 100%;
+  }
 }
-  
+
 /* .container.small {
     max-width: calc(var(--size-container) * 0.7);
 } */
